--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -10,7 +10,16 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="car">Araçlar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="color">Renkler</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Markalar</a>
+          </li>  
+           <li class="nav-item">
+            <a class="nav-link" href="#">Müşteriler</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
