--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,34 @@
 
  <div class="container"> 
   <app-navi></app-navi>
-  <div class="row">
-    <div class="col-md-3">
-      <app-color></app-color>
-      <app-brand></app-brand>
-    </div>
+  <div class="row " > 
+    <div class="col-md-3"></div>
     <div class="col-md-9">
-      <app-car></app-car>
+      <div class="card   m-3"  >
+        <div class="card-body">
+          <app-car></app-car>
+        </div>
+      </div>
+      <div class="card m-3"  >
+        <div class="card-body">
+          <app-color></app-color>
+        </div>
+      </div>
+      <div class="card m-3"  >
+        <div class="card-body">
+          <app-brand></app-brand>
+        </div>
+      </div> 
+      <div class="card  m-3"  >
+        <div class="card-body">
+          <app-customer></app-customer>
+        </div>
+      </div> 
+      <div class="card m-3"  >
+        <div class="card-body">
+          <app-rental></app-rental>
+        </div>
+      </div> 
     </div>
   </div> 
 
