--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,1 +1,18 @@
-<p>brand works!</p>
+<div *ngIf="dataLoaded == false" class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  
+  <table  *ngIf="dataLoaded == true" class="table  table-hover">
+    <thead>
+        <tr> 
+            <th scope="col">Brand Id</th>
+            <th scope="col">Brand Adı</th> 
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let brand of brands">
+            <td>{{brand.brandId}}</td>
+            <td>{{brand.brandName}}</td> 
+        </tr>
+    </tbody>
+  </table>
