--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,1 +1,24 @@
-<p>car works!</p>
+<div *ngIf="dataLoaded == false" class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
+
+<table  *ngIf="dataLoaded == true" class="table  table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Car Id</th>
+            <th scope="col">Car Adı</th>
+            <th scope="col">Model Yılı</th>
+            <th scope="col">Günlük Kiralama Bedeli</th>
+            <th scope="col">Açıklama</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let car of cars">
+            <td>{{car.carId}}</td>
+            <td>{{car.carName}}</td>
+            <td>{{car.modelYear}}</td>
+            <td>{{car.dailyPrice}}</td>
+            <td>{{car.description}}</td>
+        </tr>
+    </tbody>
+</table>
