--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,7 +1,18 @@
-<ul class="list-group">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
-  </ul>
+<div *ngIf="dataLoaded == false" class="spinner-border" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+
+<table  *ngIf="dataLoaded == true" class="table  table-hover">
+  <thead>
+      <tr> 
+          <th scope="col">Color Id</th>
+          <th scope="col">Color Adı</th> 
+      </tr>
+  </thead>
+  <tbody>
+      <tr *ngFor="let color of colors">
+          <td>{{color.colorId}}</td>
+          <td>{{color.colorName}}</td> 
+      </tr>
+  </tbody>
+</table>
